--- a/anvio/data/interactive/css/pangraph.css
+++ b/anvio/data/interactive/css/pangraph.css
@@ -103,12 +103,12 @@
   }
 
   .modal_header {
-    /* font-variant: small-caps; */
+    font-variant: small-caps;
     font-size: large;
     /* background: linear-gradient(88deg, #f1f8ff, #ffffff); */
     /* padding-left: 10px; */
-    margin-top: 20px;
-    margin-bottom: 5px;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .gene_cluster_context_items {
