--- a/anvio/data/interactive/css/main.css
+++ b/anvio/data/interactive/css/main.css
@@ -26,6 +26,19 @@ html *
     font-size: 12px;
 }
 
+.bin-modal-header {
+    font-size: large;
+    border-bottom: 1px solid black;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    padding: 6px 10px;
+    margin: 0 0 10px 0;
+    border-radius: 2px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 #additional_settings_label {
     margin: auto;
     display: block;
