--- a/anvio/data/static/template/program.tmpl
+++ b/anvio/data/static/template/program.tmpl
@@ -61,4 +61,4 @@ Edit [this file](https://github.com/merenlab/anvio/tree/master/anvio/docs/progra
 {% endfor %}
 
 {:.notice}
-Are you aware of resources that may help users better understand the utility of this program? Please feel free to edit [this file](https://github.com/merenlab/anvio/tree/master/bin/{{program.name}}) on GitHub. If you are not sure how to do that, find the `__resources__` tag in [this file](https://github.com/merenlab/anvio/blob/master/bin/anvi-interactive) to see an example.
+Are you aware of resources that may help users better understand the utility of this program? Please feel free to edit [this file](https://github.com/merenlab/anvio/blob/master/{{program.source_path}}) on GitHub. If you are not sure how to do that, find the `__resources__` tag in [this file](https://github.com/merenlab/anvio/blob/master/{{program.resources_example_source_path}}) to see an example.
